--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,8 +42,7 @@ services:
     entrypoint: >
       bash -c "
         airflow db migrate &&
-        airflow users create --username admin --firstname Admin --lastname User --role Admin --email admin@example.com --password admin &&
-        exec airflow webserver"
+        airflow api-server"
 
   # ---------- Spark ----------
   spark-master:
